bk_ida/gccida/c3/binary_op_error
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/binary_op_error/src/c-common.c:2041:24: error: must use 'enum' tag to refer to type 'tree_code'
void  binary_op_error( tree_code code) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/binary_op_error/src/c-common.c:2067:41: error: use of undeclared identifier 'off_695CB8'
error( "invalid operands to binary %s", off_695CB8); 
                                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/binary_op_error/src/obj/c-common.o] Error 1
